force-app/main/default/objects/JobCompletionEvent__e/JobCompletionEvent__e.object-meta.xml
<CustomObject>
    <description>Published by job wrappers on completion or failure. Consumed by JobCompletionTrigger to re-enter the orchestrator and advance the pipeline.</description>
    <label>Job Completion Event</label>
    <pluralLabel>Job Completion Events</pluralLabel>
</CustomObject>