force-app/main/default/objects/JobCompletionEvent__e/fields/ErrorMessage__c.field-meta.xml
<CustomField>
    <fullName>ErrorMessage__c</fullName>
    <description>Error or exception message when IsSuccess is false. Empty on success.</description>
    <label>Error Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>