force-app/main/default/objects/JobCompletionEvent__e/fields/IsSuccess__c.field-meta.xml
<CustomField>
    <fullName>IsSuccess__c</fullName>
    <defaultValue>false</defaultValue>
    <description>True when the step completed successfully; false when it failed after exhausting retries.</description>
    <label>Is Success</label>
    <type>Checkbox</type>
</CustomField>