force-app/main/default/objects/JobCompletionEvent__e/fields/PipelineRunId__c.field-meta.xml
<CustomField>
    <fullName>PipelineRunId__c</fullName>
    <description>Salesforce ID of the JobPipelineRun__c record for this run.</description>
    <label>Pipeline Run ID</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>