force-app/main/default/objects/JobCompletionEvent__e/fields/RecordsProcessed__c.field-meta.xml
<CustomField>
    <fullName>RecordsProcessed__c</fullName>
    <description>Number of records successfully processed by the step. Populated by batch jobs.</description>
    <label>Records Processed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>