force-app/main/default/objects/JobCompletionEvent__e/fields/StepDeveloperName__c.field-meta.xml
<CustomField>
    <fullName>StepDeveloperName__c</fullName>
    <description>DeveloperName of the JobStep__mdt that just finished. Used by the trigger to identify which step completed.</description>
    <label>Step Developer Name</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>