force-app/main/default/objects/JobCompletionEvent__e/fields/StepExecutionId__c.field-meta.xml
<CustomField>
    <fullName>StepExecutionId__c</fullName>
    <description>Salesforce ID of the JobStepExecution__c record for the step that just completed or failed.</description>
    <label>Step Execution ID</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>